// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DragByHandle component should not render tooltip while dragging 1`] = `
<styled.div
  grow={true}
>
  <DragSource(DropTarget(OptionsDraggableCard))
    draggingElement={Object {}}
    index={1}
  />
</styled.div>
`;

exports[`DragByHandle component should render correctly 1`] = `
<styled.div
  grow={true}
>
  <DragSource(DropTarget(OptionsDraggableCard)) />
</styled.div>
`;
